--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,340 +1,730 @@
 body {
-    background-color: rgb(53, 50, 50);
-    color: rgb(216, 205, 205);
-    font-family: "georgia";
-    font-size: 16px;
-    overflow: auto;
+  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+  font-size: 18px;
+  line-height: 34px;
+  color: #777;
+  background: url("../images/concrete_seamless.png");
 }
 
-.positionbox{
-    width: 100%;
-    position: fixed;
-    top: 0;
-    left: 0;
-    height: 100%;
+* {
+  box-sizing: border-box;
 }
 
-.title {
-    padding-top: 20px;
-    text-align: center;
-    height: 90px;
-    width: 200px;
-    background-color: rgb(27, 94, 49);
-    border-style: solid;
-    border-width: 5px;
-    border-top-width: 0px;
-    border-bottom-width: 0px;
-    border-color: rgb(136, 136, 136);
-    position: relative;
-    left: 125px;
-    top: -10px;
-}    
+/* general */
 
-.navigation {
-    float: right;
-    background-color: rgb(27, 94, 49);
-    height: 100px;
-    width: 270px;
-    border-style: solid;
-    border-width: 5px;
-    border-top-width: 0px;
-    border-bottom-width: 5px;
-    border-right-width: 5px;
-    border-left-width: 5px;
-    border-left-color: rgb(136, 136, 136);
-    border-bottom-color: rgb(136, 136, 136);
-    border-right-color: rgb(136, 136, 136);
-    position: relative;
-    top: -110px;
-    left: -42px;
-    z-index: 1;
-   
+.container {
+  width: 100%;
+  max-width: 960px;
+  margin: 0 auto;
+  clear: both;
 }
 
-.banner {
-    width: 100%;
-    background-color: rgb(97, 97, 97);
-    height: 100px;
-    border-bottom-style: solid;
-    border-bottom-width: 5px;
-    border-left-width: 0px;
-    border-bottom-color: rgb(136, 136, 136);
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: -1;
-    
+h1,
+h2,
+h3,
+p {
+  margin-bottom: 20px;
 }
 
-
-.profilepicture {
-    float: left;
-    height: 250px;
-    margin-right: 10px;
-    border-style: solid;
-    border-color: rgb(137, 137, 137);
+p:last-child {
+  margin-bottom: 0;
 }
 
-.abouttitle {
-    background-color: rgb(97, 97, 97);
-    width: 610px;
-    height: 442px;
-    border-style: solid;
-    border-width: 5px;
-    border-color: rgb(136, 136, 136);
-    position: absolute;
-    float: left;
-    top: 160px;
-    left: 130px;
-    padding: 15px;
-    
+h1,
+h2,
+h3 {
+  font-family: Georgia, Times, "Times New Roman", serif;
+  font-weight: 700;
+  color: #4aaaa5;
 }
 
-.contactform {
-    background-color: rgb(97, 97, 97);
-    width: 610px;
-    height: 600px;
-    border-style: solid;
-    border-width: 5px;
-    border-color: rgb(136, 136, 136);
-    position: absolute;
-    float: left;
-    top: 160px;
-    left: 130px;
-    padding: 15px;
+h1 {
+  padding-bottom: 20px;
+  font-size: 30px;
+  line-height: 49px;
+  border-bottom: 3px solid #ddd;
 }
 
-
-
-.connect {
-    background-color: rgb(97, 97, 97);
-    width: 225px;
-    height: 150px;
-    border-style: solid;
-    border-width: 5px;
-    border-color: rgb(136, 136, 136);
-    padding-bottom: 40px;
-    padding-left: 20px;
-    padding-right: 20px;
-    padding-top: 15px;
-    position: absolute;
-    left: 820px;
-    top: 160px;
+h2,
+h3 {
+  font-size: 22px;
 }
 
+/* header */
 
-.connecticon {
-    padding-right: 10px;
-
+#masthead {
+  position: fixed;
+  z-index: 99;
+  width: 100%;
+  margin: 0 0 30px;
+  overflow: auto;
+  color: #fff;
+  background: #fff;
+  border-bottom: 2px solid #ccc;
 }
 
-.portfoliobox {
-    background-color: rgb(97, 97, 97);
-    width: 610px;
-    height: 690px;
-    border-style: solid;
-    border-width: 5px;
-    border-color: rgb(136, 136, 136);
-    overflow: auto;
-    position: absolute;
-    float: left;
-    top: 160px;
-    left: 130px;
-    padding: 15px;
-    
+#logo {
+  float: left;
+  width: 250px;
+  height: 90px;
+  font-family: Georgia, Times, "Times New Roman", serif;
+  font-size: 30px;
+  font-weight: 700;
+  line-height: 90px;
+  color: #fff;
+  text-align: center;
+  text-decoration: none;
+  background: #4aaaa5;
 }
 
-.card1 {
-    width: 240px;
-    position: absolute;
-    left: 45px;
+nav {
+  float: right;
+  margin-top: 25px;
 }
 
-.card2 {
-    width: 240px;
-    position: absolute;
-    left: 280px;
-    top: 0px;
+nav a {
+  display: inline-block;
+  padding-left: 15px;
+  margin-left: 15px;
+  line-height: 18px;
+  color: #999;
+  text-decoration: none;
+  border-left: 1px solid #efefef;
 }
 
-.card3 {
-    width: 240px;
-    position: absolute;
-    left: -280px;
-    top: 200px;
+nav a:first-child {
+  border-left: 0 none;
 }
 
-.card4 {
-    width: 240px;
-    position: absolute;
-    left: 280px;
-    top: 0px;
+/* footer */
+
+footer {
+  padding: 30px 0;
+  clear: both;
+  font-size: 12px;
+  color: #fff;
+  color: #ccc;
+  text-align: center;
+  background: #666;
+  border-top: 8px solid #4aaaa5;
+  height: 50px;
 }
 
-.card5 {
-    width: 240px;
-    position: absolute;
-    left: -280px;
-    top: 200px;
+h3, h2 {
+  padding-bottom: 20px;
+  margin-bottom: 15px;
+  line-height: 22px;
+  border-bottom: 2px solid #eee;
 }
 
-img.cardimage {
-    width: 240px;
+/* main */
+
+#main-container {
+  padding-top: 130px;
+  min-height: calc(100vh - 70px);
 }
 
-.cardtext {
-    font-size: 18px;
-    font-weight: normal;
-    width: 240px;
-    background-color:  rgb(27, 94, 49);
-    height: 50px;
-    padding-bottom: 8px;
-    text-align: center;
-    position: relative;
-    bottom: 80px;
+.main-section {
+  float: left;
+  width: 100%;
+  max-width: 960px;
+  padding: 30px;
+  margin: 0 0 40px;
+  background: #fff;
+  border: 1px solid #ddd;
 }
 
-.cardtext:hover {
-    background-color: black;
+/* portfolio page */
+
+.work {
+  position: relative;
+  float: left;
+  width: 274px;
+  margin: 20px 0 25px;
+  overflow: auto;
 }
 
-/* a.cardtext:visited {
-    color: white;
-} */
-
-.footer {
-    background-color: rgb(27, 94, 49);
-    text-align: center;
-    height: 50px;
-    width: 100%;
-    border-top: solid;
-    border-top-width: 5px;
-    border-top-color: rgb(143, 143, 143);
-    position: absolute;
-    bottom: 0px;
-
+.work:nth-child(even) {
+  margin-right: 40px;
 }
 
-
-.navlink {
-    display: inline;
-    color:  rgb(160, 158, 158);
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    float: left;
-    border-style: solid;
-    border-right-color:  rgb(160, 158, 158);
-    border-right-width: 2px;
-    border-left-width: 0px;
-    border-top-width:0px;
-    border-bottom-width: 0px
+.work img {
+  width: 100%;
+  border: 0 none;
+  opacity: 0.8;
 }
 
-.endnavlink {
-     border-right-width: 0px;
-}
-  
-
-ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    
-}
-
-
-li {
-    display: inline;
-    
+.work h3 {
+  position: absolute;
+  bottom: 20px;
+  width: 100%;
+  padding: 15px;
+  margin-bottom: 0;
+  font-weight: 300;
+  line-height: 30px;
+  color: #fff;
+  text-align: center;
+  background: #4aaaa5;
+  border-bottom: 0;
 }
 
-
-
-.backgroundphoto {
-    z-index: -2;
-    height: 100%;
-    width: 100%;
-    position: fixed;
-    top: 0px;
-    left: 0px;
+.auth-image {
+  float: left;
+  width: 200px;
+  height: auto;
+  margin-top: 10px;
+  margin-right: 25px;
 }
 
-h2 {
-    font-weight: initial;
+/* contact page */
+
+#contact-form ul {
+  margin-bottom: 20px;
 }
 
-/* active elements */
-
-a:link {
-    text-decoration: none;
-    color: rgb(160, 158, 158);
+#contact-form li {
+  margin-bottom: 10px;
 }
 
-a.navlink:visited {
-    text-decoration: none;
-    color: rgb(160, 158, 158);
+label,
+input[type=text],
+input[type=email],
+textarea {
+  display: block;
+  width: 100%;
 }
 
-a.navlink:hover {
-    text-decoration: none;
-    color: white;
+input[type=text],
+input[type=email],
+textarea {
+  height: 35px;
+  padding: 0 10px;
+  font-size: 14px;
+  border: 1px solid #ddd;
 }
 
-a.bodylink:visited {
-    text-decoration: none;
-    color: rgb(160, 158, 158);
+textarea {
+  height: 200px;
 }
-
-a.bodylinkk:hover {
-    text-decoration: none;
-    color: white;
-}
-
-a.demolink:visited {
-    text-decoration: none;
-    color: white;
-}
-
-a.demolink:link {
-    text-decoration: none;
-    color: white;
-}
-
-a.demolink:hover {
-    text-decoration: none;
-    color: rgb(160, 158, 158);
-}
-
-
-
 
 input[type=submit] {
-        background-color:  rgb(27, 94, 49);
-        color: white;
-        padding: 12px 20px;
-        border: none;
-        border-radius: 4px;
-        cursor: pointer;
-
+  padding: 10px 30px;
+  font-size: 18px;
+  color: #fff;
+  cursor: pointer;
+  background: #4aaaa5;
+  border: 0 none;
+}
+body {
+  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+  font-size: 18px;
+  line-height: 34px;
+  color: #777;
+  background: url("../images/concrete_seamless.png");
 }
 
-input[type=submit]:hover {
-    background-color:  black;
-    color: white;
-    padding: 12px 20px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-
+* {
+  box-sizing: border-box;
 }
 
-input[type=text], select, textarea {
+/* general */
+
+.container {
+  width: 100%;
+  max-width: 960px;
+  margin: 0 auto;
+  clear: both;
+}
+
+h1,
+h2,
+h3,
+p {
+  margin-bottom: 20px;
+}
+
+p:last-child {
+  margin-bottom: 0;
+}
+
+h1,
+h2,
+h3 {
+  font-family: Georgia, Times, "Times New Roman", serif;
+  font-weight: 700;
+  color: #4aaaa5;
+}
+
+h1 {
+  padding-bottom: 20px;
+  font-size: 30px;
+  line-height: 49px;
+  border-bottom: 3px solid #ddd;
+}
+
+h2,
+h3 {
+  font-size: 22px;
+}
+
+/* header */
+
+#masthead {
+  position: fixed;
+  z-index: 99;
+  width: 100%;
+  margin: 0 0 30px;
+  overflow: auto;
+  color: #fff;
+  background: #fff;
+  border-bottom: 2px solid #ccc;
+}
+
+#logo {
+  float: left;
+  width: 250px;
+  height: 90px;
+  font-family: Georgia, Times, "Times New Roman", serif;
+  font-size: 30px;
+  font-weight: 700;
+  line-height: 90px;
+  color: #fff;
+  text-align: center;
+  text-decoration: none;
+  background: #4aaaa5;
+}
+
+nav {
+  float: right;
+  margin-top: 25px;
+}
+
+nav a {
+  display: inline-block;
+  padding-left: 15px;
+  margin-left: 15px;
+  line-height: 18px;
+  color: #999;
+  text-decoration: none;
+  border-left: 1px solid #efefef;
+}
+
+nav a:first-child {
+  border-left: 0 none;
+}
+
+/* footer */
+
+footer {
+  padding: 30px 0;
+  clear: both;
+  font-size: 12px;
+  color: #fff;
+  color: #ccc;
+  text-align: center;
+  background: #666;
+  border-top: 8px solid #4aaaa5;
+  height: 50px;
+}
+
+h3, h2 {
+  padding-bottom: 20px;
+  margin-bottom: 15px;
+  line-height: 22px;
+  border-bottom: 2px solid #eee;
+}
+
+/* sidebar */
+
+.sidebar {
+  float: right;
+  width: 100%;
+  max-width: 270px;
+  padding: 30px;
+  margin-bottom: 20px;
+  background: #fff;
+  border: 1px solid #ddd;
+}
+
+h3,
+.sidebar h2 {
+  padding-bottom: 20px;
+  margin-bottom: 15px;
+  line-height: 22px;
+  border-bottom: 2px solid #eee;
+}
+
+.social {
+  width: 62px;
+  height: 62px;
+  margin-top: 8px;
+  margin-right: 5px;
+}
+
+.social:last-child {
+  margin-right: 0;
+}
+
+/* main bar*/
+
+#main-container {
+  padding-top: 130px;
+  min-height: calc(100vh - 70px);
+}
+
+.main-section {
+  float: left;
+  width: 100%;
+  max-width: 960px;
+  padding: 30px;
+  margin: 0 0 40px;
+  background: #fff;
+  border: 1px solid #ddd;
+}
+
+/* portfolio content */
+
+.work {
+  position: relative;
+  float: left;
+  width: 274px;
+  margin: 20px 0 25px;
+  overflow: auto;
+}
+
+.work:nth-child(even) {
+  margin-right: 40px;
+}
+
+.work img {
+  width: 100%;
+  border: 0 none;
+  opacity: 0.8;
+}
+
+.work h3 {
+  position: absolute;
+  bottom: 20px;
+  width: 100%;
+  right: 39px;
+  padding: 15px;
+  margin-bottom: 0;
+  font-weight: 300;
+  line-height: 30px;
+  color: #fff;
+  text-align: center;
+  background: #4aaaa5;
+  border-bottom: 0;
+}
+
+.auth-image {
+  float: left;
+  width: 200px;
+  height: auto;
+  margin-top: 10px;
+  margin-right: 25px;
+}
+
+/* Contact Content*/
+
+#contact-form ul {
+  margin-bottom: 20px;
+}
+
+#contact-form li {
+  margin-bottom: 10px;
+}
+
+label,
+input[type=text],
+input[type=email],
+textarea {
+  display: block;
+  width: 100%;
+}
+
+input[type=text],
+input[type=email],
+textarea {
+  height: 35px;
+  padding: 0 10px;
+  font-size: 14px;
+  border: 1px solid #ddd;
+}
+
+textarea {
+  height: 200px;
+}
+
+input[type=submit] {
+  padding: 10px 30px;
+  font-size: 18px;
+  color: #fff;
+  cursor: pointer;
+  background: #4aaaa5;
+  border: 0 none;
+}
+
+
+/* MEDIA QUERIES */
+
+
+/* Default */
+
+@media (min-width: 900px) {
+  .main-section {
+    max-width: 60%;
+    margin-left: 3%;
+  }
+
+  p {
+    text-align: justify;
+  }
+
+  .sidebar {
+    max-width: 30%;
+    text-align: center;
+    margin-right: 3%;
+  }
+
+  nav {
+    max-width: 50%;
+    min-width: 35%;
+  }
+
+  .work {
+    max-width: 90%;
+    min-width: 75%;
+  }
+
+  .work img {
+    max-width: 90%;
+    min-width: 70%;
+
+  }
+
+  .work h3 {
+    max-width: 90%;
+    min-width: 70%;
+    margin-left: 5%;
+  }
+
+  .port-section {
+    text-align: center;
+    margin-left: 3%;
+    margin-bottom: 5%;
+  }
+
+  .port-section div {
+    margin-left: 12%;
+  }
+}
+
+
+/* Smaller */
+
+@media (min-width: 600px) and (max-width:900px) {
+
+  .masthead {
     width: 100%;
-    padding: 12px; 
-    border: 1px solid #ccc; 
-    border-radius: 4px; 
-    box-sizing: border-box;
-    margin-top: 6px; 
-    margin-bottom: 16px; 
-    }
+    height: 100%;
+  }
+
+  #logo {
+    max-width: 60%;
+  }
+
+  nav {
+    text-align: center;
+    display: inline-block;
+    max-width: 40%;
+    min-width: 30%;
+    margin: auto;
+  }
+  
+ nav a {
+    display: block;
+    padding-left: 0px;
+    margin-left: 0px;
+    font-size: .75em;
+    line-height: 1em;
+    border-left: none;
+    margin: 5% auto;
+  }
+
+  .main-section {
+    max-width: 80%;
+    min-width: 35%;
+    float: left;
+    margin: auto;
+    margin-left: 10%;
+    margin-bottom: 5%;
+    text-align: center;
+    display: inline-block;
+  }
+
+  p {
+    text-align: justify;
+    font-size: .8em;
+  }
+
+  h1 {
+    text-align: center;
+  }
+
+  h2 {
+    font-size: 1.5em;
+    text-align: center;
+  }
+
+  .sidebar{
+    min-width: 30%;
+    max-width: 80%;
+    float: right;
+    margin-right: 10%;
+    text-align: center;
+  }
+
+  .social {
+    width: 20%;
+    height: auto;
+  }
+
+  .work {
+    float: none;
+    max-width: 100%;
+    min-width: 80%;
+  }
+
+  .work img {
+    max-width: 100%;
+    min-width: 70%;
+  }
+
+  .work h3 {
+    max-width: 100%;
+    min-width: 70%;
+    right: 0px;
+  }
+
+  .port-section {
+    text-align: center;
+    margin-left: 12.5%;
+    margin-bottom: 5%;
+    max-width: 75%;
+  }
+
+  .port-section div {
+    margin-left: 10%;
+  }
+
+  .port-side {
+    margin-right: 12.5%;
+    max-width: 75%;
+  }
+
+}
+
+
+/* Smallest */
+
+@media (max-width: 599px) {
+
+  .masthead {
+    width: 100%;
+    height: 100%;
+  }
+
+  #logo {
+    max-width: 60%;
+  }
+
+  nav {
+    text-align: center;
+    display: inline-block;
+    max-width: 40%;
+    min-width: 30%;
+    margin: auto;
+    padding-top: 2%;
+  }
+  
+ nav a {
+    display: block;
+    padding-left: 0px;
+    margin-left: 0px;
+    font-size: .75em;
+    line-height: 1.25em;
+    border-left: none;
+    margin: 5% auto;
+  }
+
+  .main-section {
+    max-width: 80%;
+    min-width: 60%;
+    float: none;
+    margin: auto;
+    margin-bottom: 5%;
+    margin-top: 2%;
+    margin-left: 10%;
+    text-align: center;
+    display: inline-block;
+  }
+
+  h1 {
+    text-align: center;
+  }
+
+  p {
+    text-align: justify;
+    font-size: .75em;
+  }
+
+  .sidebar{
+    max-width: 80%;
+    float: none;
+    margin: auto;
+    margin-bottom: 10%;
+    text-align: center;
+  }
+
+  .social {
+    min-width: 20%;
+    height: auto;
+    border: 1px solid #ddd;
+  }
+
+  .work {
+    max-width: 90%;
+    min-width: 65%;
+  }
+
+  .work img {
+    max-width: 100%;
+    min-width: 75%;
+  }
+
+  .work h3 {
+    min-width: 75%;
+    max-width: 100%;
+    right: 0px;
+  }
+
+  .port-section {
+    max-width: 80%;
+    float: none;
+    margin-left: 10%;
+  }
+
+  .port-section div {
+    margin-left: 5%;
+  }
+    
+}
+
+
+
+
+
+
+
+
